FIX - z-index

--- a/index/style/nav_footer.css
+++ b/index/style/nav_footer.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 90px;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     background-color: white;
 }
